# Bryllup-2026

./: .gitlab-ci.yml  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.gitlab/: renovate.json
Scripts/: faq.html  galleri.html  index.html  informasjon.html  kontakt.html  krilde.html  onskeliste.html  overnatting.html  priser.html  rsvp.html  script.js  sporsmal.html  styles.css  transport.html
src/krishna_og_hilde_bryllup/: example_module.py
tests/: test_example_module.py
