[tool.poetry]
name = "krishna-og-hilde-bryllup"
description = "Kode for nettside til bryllup 2026"
authors = ["Krishna Solberg <krishna.solberg@statnett.no>"]
repository = "https://gitlab.statnett.no/krishns/krishna-og-hilde-bryllup.git"
version = "0.0.0"

[[tool.poetry.source]]
name = "artifactory"
url = "https://artifactory.statnett.no/artifactory/api/pypi/pypi_statnett_virtual/simple/"
priority = "primary"

[tool.poetry.dependencies]
python = "^3.13"

[tool.poetry.group.style.dependencies]
ruff = "*"

[tool.poetry.group.test.dependencies]
coverage = { version = "*", extras = ['toml'] }
mock = "*"
pytest = ">= 6"  # needs pyproject.toml support
pytest-cov = "*"
pytest-integration = "*"
pytest-randomly = "*"

[tool.poetry.group.dev.dependencies]
pre-commit = "*"

[tool.poetry.scripts]

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "semver"
pattern = '^(?P<base>\d+\.\d+\.\d+)(-?((?P<stage>[a-zA-Z]+)\.?(?P<revision>\d+)?))?$'

[tool.coverage.report]
# Regexes for lines to exclude from consideration
exclude_lines = [
  "pragma: no cover",
  "raise AssertionError",
  "raise NotImplementedError",
  "if verbose:",
  "if 0:",
  "if False:",
]
skip_covered = true
show_missing = true
precision = 2

[tool.coverage.run]
branch = true
source = ["krishna_og_hilde_bryllup"]

[tool.pytest.ini_options]
log_file = "pytest.log"
log_file_format = "%(asctime)s - %(name)s - %(levelname)s: %(message)s"
norecursedirs = "_build tmp*  __pycache__ src prof wheel_files"
markers = [
  "integration: Mark test as an integration test",
]
filterwarnings = []

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["ALL"]
ignore = [
  "ANN401",
  "D203",
  "D213",
  "COM812",
  "S101",
]
# Allow autofix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []
extend-exclude = [
  "build",
]
# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.per-file-ignores]
"tests/*.py" = ["D"]
"tests/test*.py" = ["ANN201"]
"tests/test_example_module.py" = ["PLR2004"]

[tool.ruff.lint.flake8-import-conventions]
[tool.ruff.lint.flake8-import-conventions.aliases]
# Declare the default aliases.
numpy = "np"
pandas = "pd"
scipy = "sp"

[tool.ruff.lint.isort]
known-first-party = []

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry.core.masonry.api"
